; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_crash_dump.c_copy_from_oldmem.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_crash_dump.c_copy_from_oldmem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OLDMEM_SIZE = common dso_local global i64 0, align 8
@OLDMEM_BASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64)* @copy_from_oldmem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @copy_from_oldmem(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %8, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = ptrtoint i8* %10 to i64
  %12 = load i64, i64* @OLDMEM_SIZE, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %33

14:                                               ; preds = %3
  %15 = load i64, i64* %7, align 8
  %16 = load i64, i64* @OLDMEM_SIZE, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = ptrtoint i8* %17 to i64
  %19 = sub i64 %16, %18
  %20 = call i64 @min(i64 %15, i64 %19)
  store i64 %20, i64* %8, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = load i32, i32* @OLDMEM_BASE, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr i8, i8* %22, i64 %24
  %26 = load i64, i64* %8, align 8
  %27 = call i32 @memcpy_real(i8* %21, i8* %25, i64 %26)
  store i32 %27, i32* %9, align 4
  %28 = load i32, i32* %9, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %14
  %31 = load i32, i32* %9, align 4
  store i32 %31, i32* %4, align 4
  br label %44

32:                                               ; preds = %14
  br label %33

33:                                               ; preds = %32, %3
  %34 = load i8*, i8** %5, align 8
  %35 = load i64, i64* %8, align 8
  %36 = getelementptr i8, i8* %34, i64 %35
  %37 = load i8*, i8** %6, align 8
  %38 = load i64, i64* %8, align 8
  %39 = getelementptr i8, i8* %37, i64 %38
  %40 = load i64, i64* %7, align 8
  %41 = load i64, i64* %8, align 8
  %42 = sub i64 %40, %41
  %43 = call i32 @memcpy_real(i8* %36, i8* %39, i64 %42)
  store i32 %43, i32* %4, align 4
  br label %44

44:                                               ; preds = %33, %30
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i64 @min(i64, i64) #1

declare dso_local i32 @memcpy_real(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
